# prime-chess

./: Cargo.toml  compose.debug.yaml  compose.yaml  development.sh
app/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
app/src/: App.css  app.css  app.tsx  index.css
app/src/components/: game.tsx  join-form.tsx  logo.tsx
prime-chess/: Cargo.toml
prime-chess/src/: board.rs  chess_game.rs  chess_move.rs  lib.rs  piece.rs  square.rs
prime-chess/tests/: from_fen.rs  squares.rs
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: game.rs  main.rs
server/src/routes/: games.rs
