[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
prime-chess = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.31"
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }